--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -58,9 +58,8 @@ setw -g window-status-current-bg colour68
 setw -g window-status-current-format ' #I:#W #F '
 setw -g window-status-format ' #I:#W #F '
 
-# set -g default-terminal "tmux"
-# set -g default-terminal 'tmux-256color'
-# set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
+bind-key s split-window
+bind-key v split-window -h
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
