--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,12 +7,23 @@ set-option -g set-titles-string '#S:#I.#P #W' # window number,program name,activ
 
 set-option -g default-terminal "screen-256color"
 set -g default-terminal "screen-256color"
+
+
+set -ga terminal-overrides ',*:Tc' # this is for 256 color
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q' # this is for the cursor shape
+
+
 # tmux no escape key timeout
 set -sg escape-time 0
 # set vi-mode
 set-window-option -g mode-keys vi
 
-bind-key = run-shell "tmux_toggle_resize"
+# use vim-like keys for splits and windows
+bind-key v split-window -h
+bind-key s split-window -v
+
+bind-key = run-shell "tmux_panes_equal"
+bind-key _ run-shell "tmux_panes_lower"
 
 unbind x
 bind-key c confirm-before -p "kill-pane #P? (y/n)" kill-pane
@@ -60,6 +71,14 @@ setw -g window-status-format ' #I:#W #F '
 
 bind-key s split-window
 bind-key v split-window -h
+# toggle pane title visibility
+bind T run 'zsh -c "arr=( off top ) && tmux setw pane-border-status \${arr[\$(( \${arr[(I)#{pane-border-status}]} % 2 + 1 ))]}"'
+# rename pane
+bind t command-prompt -p "(rename-pane)" -I "#T" "select-pane -T '%%'"
+
+# set -g default-terminal "tmux"
+# set -g default-terminal 'tmux-256color'
+# set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
